app-psql-angular/01-pv.yaml
 
 
apiVersion: apps/v1
 
kind: Deployment
 
metadata:
  name: postgres
 
spec:
  selector:
    matchLabels:
      app: postgres
 
  replicas: 1
 
  template:
    metadata:
      labels:
        app: postgres
 
    spec:
      containers:
        - name: postgres
          image: postgres:10.4
 
          imagePullPolicy: "IfNotPresent"
 
          ports:
            - containerPort: 5432
 
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
 
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: postgres-pv-claim
 
 
---
 
 
apiVersion: v1
kind: Service
 
metadata:
  name: postgres
 
  labels:
    app: postgres
 
spec:
  type: NodePort
  ports:
   - port: 5432
 
  selector:
   app: postgres
