app-psql-angular/03-springapp.yaml
apiVersion: apps/v1
 
kind: Deployment
 
metadata:
  name: spring-boot
  namespace: default
 
spec:
  selector:
   matchLabels:
    app: spring-boot
  replicas: 1
 
  template:
    metadata:
      name: spring-boot
 
      labels:
        app: spring-boot
 
    spec:
      containers:
      - name: spring-boot
        image: karthi4india/orderapi:latest
 
 
---
 
apiVersion: v1
 
kind: Service
metadata:
  name: spring-boot
  labels:
    app: spring-boot
spec:
  type: NodePort
  ports:
   - port: 8080
  selector:
   app: spring-boot
