app-psql-angular/05-ingress.yaml
apiVersion: extensions/v1beta1
 
kind: Ingress
 
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
 
 
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
 
 
            backend:
              serviceName: angular
              servicePort: 4200
          - path: /api/?(.*)
 
 
            backend:
              serviceName: spring-boot
              servicePort: 8080
  type: LoadBalancer
